# call-center

./: .dockerignore  .env.production.example  .gitignore  README.md  biome.json  docker-compose.prod.yml  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
.husky/: pre-push
apps/api/: Dockerfile  package.json  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.tsbuildinfo  vitest.config.ts  wrangler.jsonc
apps/api/scripts/: gemini-live-space-test.mjs
apps/api/src/: app.ts  main.ts
apps/api/src/common/: r2.ts  strip-undefined.ts
apps/api/src/realtime/: ari-client.ts  audio-bridge.ts  call-recorder.ts  conversation-loop.ts  conversation-orchestrator.ts  kb-query.ts  live-audio-codec.ts  llm-stream.ts  outbound-dialer.ts  (+5 more)
apps/api/test/: auth-gate.test.ts  auth.test.ts  conversation-loop.test.ts  crud.test.ts  helpers.ts  isolation.test.ts  live-audio-codec.test.ts  outbound-dialer.test.ts  require-auth.test.ts  setup.ts  tools-registry.test.ts  tools-runtime.test.ts  transcript.test.ts  tts-player.test.ts
apps/rag/: Dockerfile  api.py  project.json  pyproject.toml  requirements.txt
apps/web/: Dockerfile  components.json  next.config.ts  package.json  postcss.config.mjs  project.json  proxy.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
docker/asterisk/: Dockerfile  entrypoint.sh
docker/asterisk/config/: ari.conf  ari.prod.conf.template  extensions.conf  extensions.prod.conf  http.prod.conf  pjsip.conf  pjsip.prod.conf.template  rtp.prod.conf
(+83 files in other folders)
